--- a/admin/index.html
+++ b/admin/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>FOREVER - Admin Panel</title>
+    <title>Forever - Admin Panel</title>
   </head>
   <body>
     <div id="root"></div>
